# De-ASI-INTERFACE

./: .env.railway  .gitignore  .vercelignore  AUDIT_REPORT.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  ECOSYSTEM.md  Procfile  README.md  RELEASE_NOTES.md  SECURITY.md  config.py  example_market_data.csv  pyproject.toml  requirements.txt  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
api/: index.py
docs/: 0530-bls-aggregate-signature-verification.md  ARCHITECTURE.md  BDM_Whitepaper_RichardPatterson_2026.md  INTEGRATION_GUIDE.md  RESERVE_MANIFEST.md
policies/: 00_POLICY_INDEX.md  01_CODE_OF_CONDUCT_POLICY.md  02_SECURITY_POLICY.md  03_TRADING_RISK_MANAGEMENT_POLICY.md  04_DATA_PRIVACY_POLICY.md  05_DEFI_PROTOCOL_POLICY.md  06_INTELLECTUAL_PROPERTY_POLICY.md  07_ANTI_MONEY_LAUNDERING_POLICY.md  08_INCIDENT_RESPONSE_POLICY.md  09_RESERVE_CUSTODY_POLICY.md
quant_arch/: __init__.py  audit.py  bias.py  cli.py  config.py  data.py  decision.py  engine.py  hypothesis.py  probabilistic.py  purity.py  reporting.py  signals.py  types.py
scripts/: health_check.py
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  execution_adapter.py  signal_agent.py
src/asi/: __init__.py  asi_registry.py  interop_bridge.py
src/connectors/: __init__.py  jupiter_dex.py  solana_rpc.py  spl_token.py
src/static/: index.html
src/strategy/: __init__.py  monitor.py  orchestrator.py
src/utils/: logger.py
tests/: test_agents.py  test_asi.py  test_auth.py  test_connectors.py  test_strategy.py
(+11 files in other folders)
